updated Jenkins